[Version key: $major.$minor$type, $type: a(lpha), b(eta), r(elease)c(andidate)]

* 2006-12-26  1.000a released
    - lets call a spade a spade
    - ship a dictionary on win32/osx (1932 websters english)

* 2006-12-26  0.920a released
    - merged in the GUI

* 2006-10-27  0.919b released
    - another EepGet fix (thanks burl!)

* 2006-10-23  0.918b released
    - fix a regression in EepGet (thanks gloin and burl!)

* 2006-10-22  0.917b released
    - add hooks for scripts to be run on syndie startup and login, as well as
      a set of default preferences and aliases to be injected when a new local
      syndie nym is created.  the scripts are in the "startup" and "login"
      files in "$rootDir/scripts/".  the preferences and aliases are name=value
      pairs in that same directory in the "defaultprefs" and "defaultaliases"
      files.
    - ship with default preferences and aliases to set the default archive for
      new users to http://syndie.i2p.net/archive/, and includes a "sync"
      alias to both pull and push any changes to it.  this does not affect
      existing syndie logins, and does not overwrite existing scripts
    - keep track of old channel read keys so that we can decrypt messages that
      used them later on, but don't use them to encrypt any new messages.
      later, we can do some pruning to remove keys long ago deprecated
    - upgrade to HSQLDB 1.8.0.7
    - include an index.html in the archive directory that, by default,
      simply explains briefly what the archive is and disclaims responsability
      for the content in it.  archive operators can customize the file as they
      see fit by editing "$rootDir/archive/index.html".  That index will of
      course be visible to anyone viewing the archive on the web, and it is
      also published inside freenet archives (as are any other html files)
    - more aggressively clean up temporary files on syndie shutdown